# CalculatorSkeleton

./: .gitignore  CMakeLists.txt  CalculatorData.txt  README.md  TODO.md  data.json  docker-compose.yaml  package-lock.json
BackEnd/src/ExpressionSerializer/: CMakeLists.txt
BackEnd/test/: CMakeLists.txt
CalculatorBackEnd/src/Application/: CMakeLists.txt
CalculatorBackEnd/src/Expression/: CMakeLists.txt
CalculatorBackEnd/src/ExpressionParser/: CMakeLists.txt
CalculatorBackEnd/src/ExpressionSerializer/: CMakeLists.txt
CalculatorBackEnd/src/HttpServer/: CMakeLists.txt
CalculatorBackEnd/test/: CMakeLists.txt  mainGtest.cpp
calculatorBackend/src/Application/: CMakeLists.txt
calculatorBackend/src/ServerStarter/: CMakeLists.txt  main.cpp
calculatorBackend/src/exe/: CMakeLists.txt  main.cpp
src/: AbsoluteOperator.cpp  AddCalculatorW3.cpp  AdditionOperator.cpp  CMakeLists.txt  CalcHistory.cpp  CalcHistoryPair.cpp  CalcHistoryTraverser.cpp  Calculator.cpp  CalculatorApi.h  CalculatorResources.cpp  CalculatorStrings.cpp  CalculatorW1.cpp  CalculatorW2.cpp  DivideCalculatorW3.cpp  DivisionOperator.cpp  EvaluateOperator.cpp  ExponentOperator.cpp  ExpressionFactory.cpp  ExpressionInterface.cpp  FourOperationFactory.cpp  HelpOperator.cpp  IBinaryOperator.cpp  IExpression.cpp  IOperator.cpp  ITraceable.cpp  IUnaryOperator.cpp  InverseOperator.cpp  IoStreamCalculatorW2.cpp  MathExpression.cpp  MathResult.cpp  MultiplicationOperator.cpp  MultiplyCalculatorW3.cpp  OpSymbol.cpp  OperatorExpression.cpp  OperatorFactory.cpp  ParenthesisOperator.cpp  SimpleExpressionCalculatorW3 copy.cpp  SimpleExpressionCalculatorW3Factory.cpp  SquareRootOperator.cpp  SubtractCalculatorW3.cpp  (+8 more)
src/Application/: CMakeLists.txt
src/Application/inc/: AddCalculator.h  Calculator.h  CalculatorApplication.h  CalculatorApplicationFactory.h  ConsoleIo.h  DivideCalculator.h  MultiplyCalculator.h  Parser.h  SubtractCalculator.h
src/Application/src/: AddCalculator.cpp  Calculator.cpp  CalculatorApplication.cpp  CalculatorApplicationFactory.cpp  ConsoleIo.cpp  DivideCalculator.cpp  MultiplyCalculator.cpp  Parser.cpp  SubtractCalculator.cpp  main.cpp
src/Application/test/: AddCalculatorGTest.cpp  CMakeLists.txt  CalculatorClassGTest.cpp  DivideCalculatorGTest.cpp  HistoryGTest.cpp  LimitCalculatorGTest.cpp  MultiplyCalculatorGTest.cpp  SubtractCalculatorGTest.cpp  calculator_test  calculator_test[1]_include.cmake  calculator_test[1]_tests.cmake  mainGtest.cpp
src/Calculator/: CMakeLists.txt
src/Calculator/inc/: AddCalculator.h  DivideCalculator.h  MultiplyCalculator.h  SimpleExpressionCalculator.h  SimpleExpressionCalculatorFactory.h  SubtractCalculator.h
src/Calculator/src/: AddCalculator.cpp  DivideCalculator.cpp  MultiplyCalculator.cpp  SimpleExpressionCalculator.cpp  SimpleExpressionCalculatorFactory.cpp  SubtractCalculator.cpp
src/CompoundExpression/: CMakeLists.txt
src/CompoundExpression/inc/: CompoundExpressionCalculator.h
src/CompoundExpression/src/: CompoundExpressionCalculator.cpp
src/CompoundExpression/test/: CompoundExpressionCalculatorGTest.cpp
src/Controllers/: CalculatorController.cpp  HistoryController.cpp
src/Custom/: CMakeLists.txt
src/Custom/inc/: CustomCalculator.h  CustomCalculatorFactory.h
src/Custom/src/: CustomCalculator.cpp  CustomCalculatorFactory.cpp
src/Custom/test/: CustomCalculatorFactoryGTest.cpp  CustomCalculatorGTest.cpp
src/Expression/: CMakeLists.txt
src/Expression/inc/: ExpressionSerializer.h  IExpression.h  OperatorExpression.h  SymbolExpression.h  ValueExpression.h
src/Expression/src/: ExpressionSerializer.cpp  OperatorExpression.cpp  SymbolExpression.cpp  ValueExpression.cpp
src/Expression/test/: OperatorExpressionGtest.cpp  SymbolExpressionGtest.cpp
src/ExpressionParser/: CMakeLists.txt
src/ExpressionParser/src/: ExpressionFactory.cpp
src/History/: CMakeLists.txt
src/History/inc/: History.h
src/History/src/: History.cpp
src/History/test/: CalculatorHistoryGTest.cpp
src/Interface/: CMakeLists.txt  ICalculator.h  ICalculatorFactory.h  ICalculatorTemplate.h  ICalculatorTemplateFactory.h
src/Interface/inc/: ICalculator.h  ICalculatorFactory.h
src/MathOperations/: Addition.cpp  Constant.cpp  Division.cpp  Multiplication.cpp  Subtraction.cpp
src/MathOperations.cpp/: Addition.cpp  Division.cpp  Multiplication.cpp  Subtration.cpp
src/Messages/: CMakeLists.txt
src/Messages/inc/: CalculatorMessages.h
src/Parser/: CMakeLists.txt
src/Parser/inc/: Parser.h
src/Parser/src/: Parser.cpp
src/Rest/inc/: Rest.h
src/Rest/src/: Rest.cpp
src/Result/: CMakeLists.txt
src/Result/inc/: IResult.h  Result.h  ResultFactory.h
src/Result/src/: Result.cpp  ResultFactory.cpp
src/Services/: CalculatorService.cpp  HistoryService.cpp
src/SimpleExpression/: CMakeLists.txt
src/SimpleExpression/inc/: AddCalculator.h  CalculatorOperators.h  DivideCalculator.h  MultiplyCalculator.h  SimpleExpressionCalculator.h  SimpleExpressionCalculatorFactory.h  SubtractCalculator.h  (+1 more)
src/Strings/: CMakeLists.txt
src/exe/: CMakeLists.txt  main.cpp
test/: AbsoluteOperatorGtest.cpp  AdditionOperatorGtest.cpp  AdditionTests.cpp  CMakeLists.txt  CalculatorClassGTest.cpp  CalculatorFunctions_UnitTest.cpp  CalculatorGTest.cpp  CalculatorTests.cpp  CalculatorW1GTest.cpp  CalculatorW2GTest.cpp  CalculatorW3GTest.cpp  ConstantTests.cpp  DivisionOperatorGtest.cpp  DivisionTests.cpp  EvaluateOperatorGtest.cpp  ExponentOperatorGtest.cpp  ExpressionFactoryGtest.cpp  HelpOperatorGtest.cpp  HistoryGTest.cpp  IBinaryOperatorGtest.cpp  ITraceableGtest.cpp  IUnaryOperatorGtest.cpp  InverseOperatorGtest.cpp  MathExpressionTests.cpp  MultiplicationOperatorGtest.cpp  MultiplicationTests.cpp  OpSymbolGtest.cpp  OperatorExpressionGtest.cpp  OperatorFactoryGtest.cpp  ParenthesisOperatorGtest.cpp  ParserGTest.cpp  ResultFactoryGTest.cpp  ResultGTest.cpp  SquareRootOperatorGtest.cpp  SubtractionOperatorGtest.cpp  SubtractionTests.cpp  SymbolExpressionGtest.cpp  SymbolGtest.cpp  ValueExpressionGtest.cpp  calculatorGtest.cpp  (+7 more)
test/googletest-subbuild/: CMakeLists.txt
(+248 files in other folders)
